; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/x25/extr_af_x25.c_x25_destroy_socket.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/x25/extr_af_x25.c_x25_destroy_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sock*)* @x25_destroy_socket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @x25_destroy_socket(%struct.sock* %0) #0 {
  %2 = alloca %struct.sock*, align 8
  store %struct.sock* %0, %struct.sock** %2, align 8
  %3 = load %struct.sock*, %struct.sock** %2, align 8
  %4 = call i32 @sock_hold(%struct.sock* %3)
  %5 = load %struct.sock*, %struct.sock** %2, align 8
  %6 = call i32 @lock_sock(%struct.sock* %5)
  %7 = load %struct.sock*, %struct.sock** %2, align 8
  %8 = call i32 @__x25_destroy_socket(%struct.sock* %7)
  %9 = load %struct.sock*, %struct.sock** %2, align 8
  %10 = call i32 @release_sock(%struct.sock* %9)
  %11 = load %struct.sock*, %struct.sock** %2, align 8
  %12 = call i32 @sock_put(%struct.sock* %11)
  ret void
}

declare dso_local i32 @sock_hold(%struct.sock*) #1

declare dso_local i32 @lock_sock(%struct.sock*) #1

declare dso_local i32 @__x25_destroy_socket(%struct.sock*) #1

declare dso_local i32 @release_sock(%struct.sock*) #1

declare dso_local i32 @sock_put(%struct.sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
